java-module: Change CSP monitoring's metricType fields to measurement